k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spina-challenge
  labels:
    app: spina-challenge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spina-challenge
  template:
    metadata:
      labels:
        app: spina-challenge
    spec:
      containers:
        - name: rails-app
          image: cirobessa/spina-challenge:latest  
          ports:
            - containerPort: 3000
