k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spina-service
spec:
  selector:
    app: spina-challenge
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
