k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spina-ingress
spec:
  rules:
    - host: spina.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spina-service
                port:
                  number: 80
